Add action generation and querying to TicTacToe example (#78)
* Start bringing up verification for tictactoe

* Get empty oracles passing through VDM to V2 cleanly

# Conflicts:
#	tictactoe/adapter-implementation/src/main/kotlin/com/anaplan/engineering/azuki/tictactoe/adapter/implementation/SampleSystemFactory.kt

diff --git c/tictactoe/adapter-implementation/src/main/kotlin/com/anaplan/engineering/azuki/tictactoe/adapter/implementation/SampleSystemFactory.kt i/tictactoe/adapter-implementation/src/main/kotlin/com/anaplan/engineering/azuki/tictactoe/adapter/implementation/SampleSystemFactory.kt
index 668b573..e5493fa 100644
--- c/tictactoe/adapter-implementation/src/main/kotlin/com/anaplan/engineering/azuki/tictactoe/adapter/implementation/SampleSystemFactory.kt
+++ i/tictactoe/adapter-implementation/src/main/kotlin/com/anaplan/engineering/azuki/tictactoe/adapter/implementation/SampleSystemFactory.kt
@@ -9,10 +9,15 @@ import com.anaplan.engineering.azuki.tictactoe.adapter.api.TicTacToeQueryFactory
 import com.anaplan.engineering.azuki.tictactoe.adapter.declaration.TicTacToeDeclarationState
 import com.anaplan.engineering.azuki.tictactoe.adapter.implementation.action.SampleAction
 import com.anaplan.engineering.azuki.tictactoe.adapter.implementation.action.SampleActionFactory
+import com.anaplan.engineering.azuki.tictactoe.adapter.implementation.actionGenerator.SampleActionGenerator
+import com.anaplan.engineering.azuki.tictactoe.adapter.implementation.actionGenerator.SampleActionGeneratorFactory
 import com.anaplan.engineering.azuki.tictactoe.adapter.implementation.check.SampleCheck
 import com.anaplan.engineering.azuki.tictactoe.adapter.implementation.check.SampleCheckFactory
 import com.anaplan.engineering.azuki.tictactoe.adapter.implementation.declaration.SampleDeclarationBuilder
 import com.anaplan.engineering.azuki.tictactoe.adapter.implementation.declaration.SampleDeclarationBuilderFactory
+import com.anaplan.engineering.azuki.tictactoe.adapter.implementation.q