@@ -4,15 +4,47 @@ plugins {
 }
 
 configurations {
-    runner.extendsFrom runtime
+    sampleImpl
     vdm
+    kazuki
 }
 
 dependencies {
-    runner project(":tictactoe:dsl")
-    runner project(":azuki-runner")
+    implementation project(":tictactoe:adapter-script-generation")
+    implementation project(":azuki-runner")
+
+    implementation libs.clikt.jvm
+    implementation libs.kotlin.reflect
+    implementation libs.jackson.module
+    implementation libs.slf4j.api
+    implementation libs.log4j.core
+    runtimeOnly libs.slf4j.impl
+
+    sampleImpl project(":tictactoe:adapter-implementation")
+    sampleImpl project(":tictactoe:implementation-v2")
 
     vdm project(":tictactoe:adapter-vdm")
+
+    kazuki project(":tictactoe:adapter-kazuki")
+    kazuki project(":tictactoe:kazuki")
+}
+
+task sampleImplClasspathJar(type: Jar) {
+    dependsOn configurations.sampleImpl
+    archiveBaseName = 'SampleImpl'
+    manifest {
+        attributes(
+            "Class-Path": configurations.sampleImpl.collect { it.absolutePath }.join(' '))
+    }
+}
+
+task kazukiClasspathJar(type: Jar) {
+    dependsOn configurations.kazuki
+    archiveBaseName = 'Kazuki'
+    manifest {
+        attributes(
+            "Class-Path": configurations.kazuki.collect { it.absolutePath }.join(' '))
+    }
 }
 
 task vdmClasspathJar(type: Jar) {
@@ -24,18 +56,53 @@ task vdmClasspathJar(type: Jar) {
     }
 }
 
+ext {
+    scenarioFile = providers.gradleProperty("scenarioFile").getOrElse("script.scn")
+    oracleScenarioFile = providers.gradleProperty("oracleScenarioFile").getOrElse("oracle_script.scn")
+}
+
 task runScript(type: JavaExec) {
     dependsOn vdmClasspathJar
-    classpath = configurations.runner
-    main 'com.anaplan.engineering.azuki.runner.ScenarioScriptRunnerKt'
-    jvmArgs '-Xmx4g'
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = 'com.anaplan.engineering.azuki.tictactoe.scriptrunner.TicTacToeScenarioScriptRunnerKt'
+    jvmArgs '-Xmx4g', "--add-opens=java.base/java.nio=ALL-UNNAMED"
     args = [
-        file("script.scn").absolutePath,
-        file("config/imports").absolutePath,
-        'VDM'
+        "-d", file("build/run${System.currentTimeMillis()}").absolutePath,
+        "-v", file("build/verified").absolutePath,
+        "-u", file("build/unverified").absolutePath,
+        "-i", file("config/imports").absolutePath,
+        "-t", "VDM",
+        file(scenarioFile).absolutePath,
+    ]
+    def instanceJars = [
+        vdmClasspathJar.archiveFile.get().asFile.absolutePath,
     ]
     systemProperties = [
-        "com.anaplan.engineering.azuki.implementation.instance.jars": vdmClasspathJar.archiveFile.get().asFile.absolutePath
+        "com.anaplan.engineering.azuki.implementation.instance.jars": instanceJars.join(","),
+    ]
+}
+
+task runOracleScript(type: JavaExec) {
+    dependsOn sampleImplClasspathJar
+    dependsOn kazukiClasspathJar
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = 'com.anaplan.engineering.azuki.tictactoe.scriptrunner.TicTacToeScenarioScriptRunnerKt'
+    jvmArgs '-Xmx4g', "--add-opens=java.base/java.nio=ALL-UNNAMED"
+    args = [
+        "-d", file("build/run${System.currentTimeMillis()}").absolutePath,
+        "-v", file("build/verified").absolutePath,
+        "-u", file("build/unverified").absolutePath,
+        "-i", file("config/imports").absolutePath,
+        "-t", "SampleImpl",
+        "-o", "Kazuki",
+        file(oracleScenarioFile).absolutePath,
+    ]
+    def instanceJars = [
+        sampleImplClasspathJar.archiveFile.get().asFile.absolutePath,
+        kazukiClasspathJar.archiveFile.get().asFile.absolutePath,
+    ]
+    systemProperties = [
+        "com.anaplan.engineering.azuki.implementation.instance.jars": instanceJars.join(','),
     ]
 }
 
